# DiscordStockSentimentBot

./: .env  README.md  main.py  pyproject.toml
src/: main.py
src/app/bot/: __init__.py  discord_bot.py
src/app/database/: __init__.py  tables.py
src/app/jobs/: __init__.py  stock_analysis_job.py  stock_tracker_job.py
src/app/models/: __init__.py  news_article.py  stock.py
src/app/services/: __init__.py  article_content_fetcher.py  finnhub_scraper.py  news_scraper.py  sentiment_analyzer.py  text_summarizer.py  ticker_validator.py  yahoo_finance_scraper.py
src/interfaces/: __init__.py  job.py
